media container overflow fix

--- a/css/media.css
+++ b/css/media.css
@@ -53,8 +53,7 @@
   }
 
   .about-containers {
-    margin-top: 0 5%;
-    /* margin-top: 2rem; */
+    margin-top: 2rem;
     ;
   }
 }
@@ -68,7 +67,7 @@
 
   #profile {
     height: 83vh;
-    margin-bottom: 0;
+    margin-bottom: 6rem;
   }
 
   article {
@@ -118,6 +117,7 @@
   .about-profile-pic {
     width: 55vw;
     height: 55vw;
+    justify-content: left;
   }
 
   .section__text__p2 {
